# python-price-analysis

./: README.md  pyproject.toml
scripts/: example.py  price_analysis.py
scripts/data/input/: prices.csv
