[project]
name = "python-price-analysis"
version = "0.1.0"
authors = [
    {name = "Piotr Opała", email = "opalapj@gmail.com"},
]
license = {text = "MIT"}
dependencies = ["pandas>=3.0.1", "numpy>=2.4.2", "matplotlib>=3.10.8", "seaborn>=0.13.2", "holidays>=0.92"]
requires-python = "==3.13.*"

[tool.pdm]
distribution = false
